# VPN-sandbox

./: .gitignore  README.md  pyproject.toml
docs/handoff/: README.md  global-roadmap.md  product-logic-and-decisions.md
docs/superpowers/plans/: 2026-06-12-vpn-sandbox-foundation.md  2026-06-12-vpn-sandbox-pyqt-shell.md
docs/superpowers/specs/: 2026-06-12-vpn-sandbox-design.md
src/vpn_sandbox/: __init__.py  __main__.py
src/vpn_sandbox/app/: __init__.py  bootstrap.py  controller.py  ids.py  paths.py
src/vpn_sandbox/core/: models.py  policy.py
src/vpn_sandbox/events/: journal.py
src/vpn_sandbox/ipc/: messages.py  service_simulator.py
src/vpn_sandbox/storage/: repository.py  schema.py
src/vpn_sandbox/ui/: __init__.py  app.py  first_run.py  main_window.py  mini_indicator.py  text.py  tray.py  view_models.py  widgets.py
tests/: test_cli.py
tests/app/: test_bootstrap.py  test_controller.py
tests/core/: test_models.py  test_policy.py
tests/events/: test_journal.py
tests/ipc/: test_messages.py  test_service_simulator.py
tests/storage/: test_repository.py
tests/ui/: test_qt_smoke.py  test_view_models.py
