[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "vpn-sandbox"
version = "0.1.0"
description = "VPN sandbox foundation for controlled application networking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyQt6>=6.7",
]

[project.scripts]
vpn-sandbox = "vpn_sandbox.__main__:main"
vpn-sandbox-ui = "vpn_sandbox.ui.app:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vpn_sandbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
